Añadida estructura principal a cada página, añadidos enlaces entre archivos

--- a/main.html
+++ b/main.html
@@ -1,8 +1,16 @@
 <html>
     <head>
-        <title>ViaPy- Inicio</title>
+        <title>Inicio - ViaPy</title>
     </head>
     <body>
-        
+        <H1 align="center">Bienvenido a ViaPy</H1>
+        <ul>
+            <li>Inicio</li>
+            <li><a href="sobrenosotros.html">Sobre Nosotros</a></li>
+            <li>Servicios</li>
+            <li>Preguntas Frecuentes</li>
+            <li>Como Llegar y Zona Delivery</li>
+            <li><a href="contacto.html">Contacto</a></li>
+        </ul>
     </body>
 </html>
