Progreso en la barra superior, cambio de nombre de archivo

--- a/main.html
+++ b/main.html
@@ -3,6 +3,8 @@
         <title>Inicio - ViaPy</title>
     </head>
     <body>
+        <hr width="100%" size="10%" color="#24225f">
+        <img src="imagenes/logo.png" height=10% align="left">
         <H1 align="center">Bienvenido a ViaPy</H1>
         <ul>
             <li>Inicio</li>
