--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -4,15 +4,15 @@
     </head>
     <body>
         <h1 align="center">Sobre Nosotros</h1>
-        <h2>Mision</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi eget erat massa. Praesent tincidunt vestibulum quam, vel accumsan ante dapibus nec. Phasellus aliquam interdum dapibus. Praesent at mi vel ipsum auctor pellentesque at sit amet leo. Vivamus mattis elit orci, non faucibus ex faucibus sed. Pellentesque imperdiet ante nec nisi elementum tincidunt. Phasellus sit amet congue ante. Duis dictum purus ac lectus laoreet fringilla. Donec semper consequat leo id molestie. Nunc risus nunc, luctus vel tempor dapibus, vestibulum nec ipsum. Donec a vestibulum orci. Morbi maximus id lorem vitae cursus. Aliquam erat volutpat. Proin sit amet lectus a dolor tempor tincidunt et non nisl.</p>
-        <h2>Vision</h2>
-        <p>Proin eu condimentum orci. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nulla tincidunt lectus a mi finibus finibus id vitae quam. Ut eu auctor lorem, nec varius lectus. Nunc ut justo venenatis magna volutpat lacinia. Nulla feugiat ligula ac ipsum bibendum, non efficitur dolor cursus. Sed fermentum metus sed lorem consectetur auctor. Donec dapibus interdum auctor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nunc eget quam ac diam rhoncus vulputate. Nunc tristique lacus id nunc pulvinar, quis feugiat mauris fermentum.</p>
-        <h2>Objetivos</h2>
+        <p>Con VIAPY podes realizar tus compras online y te lo traemos hasta Asunción. Pedí tu casilla gratuita hoy mismo.</p>
+        <p>¿Necesitas ayuda? Envianos un mensaje y te asesoramos al momento de hacer las compras.</p>
+        <p>Traé tus compras de:</p>
         <ul>
-            <li>Praesent luctus posuere nisl a tincidunt</li>
-            <li>In facilisis est feugiat ipsum sagittis, vel lacinia lacus suscipit</li>
-            <li>Maecenas eget magna fringilla, sagittis purus non, congue ex.</li>
+            <li>Amazon</li>
+            <li>SHEIN</li>
+            <li>eBay</li>
+            <li>Temu</li>
+            <li>Y muchas páginas más</li>
         </ul>
     </body>
 </html>
