--- a/contacto.html
+++ b/contacto.html
@@ -5,6 +5,6 @@
     <body>
         <h1 align ="center">Contacto</h1>
         <h2>WhatsApp</h2>
-        <h2>Instagram</h2>
+        <h2>Insta</h2>
     </body>
 </html>
