Modificaciones menores en la página Sobre Nosotros

--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -12,7 +12,7 @@
             <li>SHEIN</li>
             <li>eBay</li>
             <li>Temu</li>
-            <li>Y muchas páginas más</li>
         </ul>
+        <p>Y muchas páginas más</p>
     </body>
 </html>
