Añadidas instrucciones en la carpeta desarrollo; logo ajustado; añadida "barra" en todas las páginas, añadidos comentarios de documentación

--- a/main.html
+++ b/main.html
@@ -1,11 +1,21 @@
+<!--Sitio principal-->
+<!--Queda pendiente añadir elementos de relleno a la página, si es posible editar la tabla para añadir botones-->
 <html>
     <head>
         <title>Inicio - ViaPy</title>
     </head>
-    <body>
-        <hr width="100%" size="10%" color="#24225f">
-        <img src="imagenes/logo.png" height=10% align="left">
+    <!--Colores consistentes con la paleta usada por el cliente en su perfil ya existente de Instagram-->
+    <body bgcolor="#ffffff">
+        <table border="0" height="50" width="100%" hspace="30">
+            <tr bgcolor="#24225f">
+                <td>
+                    <!--Notar que el logo aquí no es un botón como en el resto de las páginas, pues ya estamos en el inicio-->
+                    <img src="imagenes/logo.png" height="50" align="left">
+                </td>
+            </tr>
+        </table>
         <H1 align="center">Bienvenido a ViaPy</H1>
+        <!--Más adelante mover estas opciones a un menú propio-->
         <ul>
             <li>Inicio</li>
             <li><a href="sobrenosotros.html">Sobre Nosotros</a></li>
