--- a/contacto.html
+++ b/contacto.html
@@ -1,10 +1,18 @@
+<!--Página de contacto de la empresa. Los enlaces llevan a un chat en WhatsApp y al perfil de Instagram de la empresa-->
 <html>
     <head>
         <title>Contacto - ViaPy</title>
     </head>
     <body>
+        <table border="0" height="50" width="100%" hspace="30">
+            <tr bgcolor="#24225f">
+                <td>
+                    <a href="main.html"><img src="imagenes/logo.png" height="50" align="left"></a>
+                </td>
+            </tr>
+        </table>
         <h1 align ="center">Contacto</h1>
         <h2>WhatsApp</h2>
-        <h2>Insta</h2>
+        <h2>Instagram</h2>
     </body>
 </html>
