--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -1,8 +1,17 @@
+<!--Página de información sobre la empresa. Contenidos proveídos por el cliente y añadidos con cambios mínimos.-->
+
 <html>
     <head>
         <title>Sobre Nosotros - ViaPy</title>
     </head>
     <body>
+        <table border="0" height="50" width="100%" hspace="30">
+            <tr bgcolor="#24225f">
+                <td>
+                    <a href="main.html"><img src="imagenes/logo.png" height="50" align="left"></a>
+                </td>
+            </tr>
+        </table>
         <h1 align="center">Sobre Nosotros</h1>
         <p>Con VIAPY podes realizar tus compras online y te lo traemos hasta Asunción. Pedí tu casilla gratuita hoy mismo.</p>
         <p>¿Necesitas ayuda? Envianos un mensaje y te asesoramos al momento de hacer las compras.</p>
