Añadida marquesina en main, indicaciones en carpeta desarrollo

--- a/main.html
+++ b/main.html
@@ -14,6 +14,7 @@
                 </td>
             </tr>
         </table>
+        <marquee Behavior = "scroll" Loop="-1">No olvides colocar correctamente la dirección de tu casilla a la hora de comprar</marquee>
         <H1 align="center">Bienvenido a ViaPy</H1>
         <!--Más adelante mover estas opciones a un menú propio-->
         <ul>
