Añadida página de dirección, marco flotante con mapa, logos en /imagenes,  cambios estéticos en la marquesina, actualizado el archivo de indicaciones en /desarrollo

--- a/contacto.html
+++ b/contacto.html
@@ -1,9 +1,9 @@
 <!--Página de contacto de la empresa. Los enlaces llevan a un chat en WhatsApp y al perfil de Instagram de la empresa-->
 <html>
     <head>
-        <title>Contacto - ViaPy</title>
+        <title>Contacto - VIAPY</title>
     </head>
-    <body>
+    <body bgcolor="#ffffff">
         <table border="0" height="50" width="100%" hspace="30">
             <tr bgcolor="#24225f">
                 <td>
