--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -2,9 +2,9 @@
 
 <html>
     <head>
-        <title>Sobre Nosotros - ViaPy</title>
+        <title>Sobre Nosotros - VIAPY</title>
     </head>
-    <body>
+    <body bgcolor="#ffffff">
         <table border="0" height="50" width="100%" hspace="30">
             <tr bgcolor="#24225f">
                 <td>
