--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <!--Queda pendiente añadir elementos de relleno a la página, si es posible editar la tabla para añadir botones-->
 <html>
     <head>
-        <title>Inicio - ViaPy</title>
+        <title>Inicio - VIAPY</title>
     </head>
     <!--Colores consistentes con la paleta usada por el cliente en su perfil ya existente de Instagram-->
     <body bgcolor="#ffffff">
@@ -13,16 +13,18 @@
                     <img src="imagenes/logo.png" height="50" align="left">
                 </td>
             </tr>
+            <tr bgcolor="#c6c8d7">
+                <td><marquee Behavior = "scroll" Loop="-1">No olvides colocar correctamente la dirección de tu casilla a la hora de comprar</marquee></td>
+            </tr>
         </table>
-        <marquee Behavior = "scroll" Loop="-1">No olvides colocar correctamente la dirección de tu casilla a la hora de comprar</marquee>
-        <H1 align="center">Bienvenido a ViaPy</H1>
+        <H1 align="center">Bienvenido a VIAPY</H1>
         <!--Más adelante mover estas opciones a un menú propio-->
         <ul>
             <li>Inicio</li>
             <li><a href="sobrenosotros.html">Sobre Nosotros</a></li>
             <li>Servicios</li>
             <li>Preguntas Frecuentes</li>
-            <li>Como Llegar y Zona Delivery</li>
+            <li><a href="direccion.html">Como Llegar y Zona Delivery</a></li>
             <li><a href="contacto.html">Contacto</a></li>
         </ul>
     </body>
