Añadido texto alt y titulo a las imagenes, formateado sobrenosotros.html con tablas, añadidos enlaces a las tiendas listadas, actulizadas directivas en InfoGeneral.txt

--- a/contacto.html
+++ b/contacto.html
@@ -7,7 +7,7 @@
         <table border="0" height="50" width="100%" hspace="30">
             <tr bgcolor="#24225f">
                 <td>
-                    <a href="main.html"><img src="imagenes/logo.png" height="50" align="left"></a>
+                    <a href="main.html"><img src="imagenes/logo.png" height="50" align="left" alt="Logo VIAPY" title="VIAPY - Inicio"></a>
                 </td>
             </tr>
         </table>
