--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -8,7 +8,7 @@
         <table border="0" height="50" width="100%" hspace="30">
             <tr bgcolor="#24225f">
                 <td>
-                    <a href="main.html"><img src="imagenes/logo.png" height="50" align="left"></a>
+                    <a href="main.html"><img src="imagenes/logo.png" height="50" alt="Logo VIAPY" title="VIAPY - Inicio" align="left"></a>
                 </td>
             </tr>
         </table>
@@ -16,12 +16,22 @@
         <p>Con VIAPY podes realizar tus compras online y te lo traemos hasta Asunción. Pedí tu casilla gratuita hoy mismo.</p>
         <p>¿Necesitas ayuda? Envianos un mensaje y te asesoramos al momento de hacer las compras.</p>
         <p>Traé tus compras de:</p>
-        <ul>
-            <li>Amazon</li>
-            <li>SHEIN</li>
-            <li>eBay</li>
-            <li>Temu</li>
-        </ul>
+        <table>
+            <tr align="center">
+                <td><a href="https://www.amazon.com" target="_blank"><img src=imagenes/amazon.png title="Ir a Amazon" alt="Logo de Amazon"></a></td>
+                <td><a href="https://us.shein.com" target="_blank"><img src=imagenes/shein.png title="Ir a Shein" alt="Logo de Shein"></a></td>
+                <td><a href="https://www.ebay.com" target="_blank"><img src=imagenes/ebay.png title="Ir a eBay" alt="Logo de eBay"></a></td>
+                <td><a href="https://www.temu.com" target="_blank"><img src=imagenes/temu.png title="Ir a Temu" alt="Logo de Temu"></a></td>
+            </tr>
+            <tr align="center">
+                <td>Amazon</td>
+                <td>Shein</td>
+                <td>eBay</td>
+                <td>Temu</td>
+            </tr>
+        </table>
+        <br>
         <p>Y muchas páginas más</p>
+        <p><a href="contacto.html">Contactanos</a></p>
     </body>
 </html>
