Ajustes en contacto.html

--- a/contacto.html
+++ b/contacto.html
@@ -15,8 +15,8 @@
   <div align="center">
     <table>
       <tr align="center">
-        <td><a href="https://wa.me/5959972819995"><img src="imagenes/whatsapp.png" alt="WhatsApp" width="60%" height="30"></a></td>
-        <td><a href="https://www.instagram.com/viapy_courier/"><img src="Imagenes/instagram.png" alt="Instagram" width="60%" height="30"></td>
+        <td><a href="https://wa.me/5959972819995"><img src="imagenes/whatsapp.png" alt="Logo WhatsApp" width="30%" title="WhatsApp"></a></td>
+        <td><a href="https://www.instagram.com/viapy_courier/"><img src="Imagenes/instagram.png" alt="Logo Instagram" width="30%" title="Instagram"></td>
       </TR>
       <tr align="center">
         <td>WhatsApp</td>
