Correcciones en sobrenosotros.html

--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -18,10 +18,10 @@
         <p>Traé tus compras de:</p>
         <table>
             <tr align="center">
-                <td><a href="https://www.amazon.com" target="_blank"><img src=imagenes/amazon.png witdth="60%" title="Ir a Amazon" alt="Logo de Amazon"></a></td>
-                <td><a href="https://us.shein.com" target="_blank"><img src=imagenes/shein.png witdth="60%" title="Ir a Shein" alt="Logo de Shein"></a></td>
-                <td><a href="https://www.ebay.com" target="_blank"><img src=imagenes/ebay.png witdth="60%" title="Ir a eBay" alt="Logo de eBay"></a></td>
-                <td><a href="https://www.temu.com" target="_blank"><img src=imagenes/temu.png witdth="60%" title="Ir a Temu" alt="Logo de Temu"></a></td>
+                <td><a href="https://www.amazon.com" target="_blank"><img src=imagenes/amazon.png width="60%" title="Ir a Amazon" alt="Logo de Amazon"></a></td>
+                <td><a href="https://us.shein.com" target="_blank"><img src=imagenes/shein.png width="60%" title="Ir a Shein" alt="Logo de Shein"></a></td>
+                <td><a href="https://www.ebay.com" target="_blank"><img src=imagenes/ebay.png width="60%" title="Ir a eBay" alt="Logo de eBay"></a></td>
+                <td><a href="https://www.temu.com" target="_blank"><img src=imagenes/temu.png width="60%" title="Ir a Temu" alt="Logo de Temu"></a></td>
             </tr>
             <tr align="center">
                 <td>Amazon</td>
