--- a/contacto.html
+++ b/contacto.html
@@ -2,9 +2,20 @@
     <head>
         <title>Contacto - ViaPy</title>
     </head>
-    <body>
-        <h1 align ="center">Contacto</h1>
-        <h2>WhatsApp</h2>
-        <h2>Insta</h2>
+  <div align="center">
+    <h1>Contactanos</h1>
+    
+    <p>
+      <a href="https://wa.me/5959972819995"><img src="imagenes/whatsapp-icon.png" alt="WhatsApp" width="30" height="30">0972 819 995</a>
+    </p>
+
+    <p>
+      <a href="https://www.instagram.com/viapy_courier/"><img src="Imagenes/instagram-icon.png" alt="Instagram" width="30" height="30">@viapy_courier</a>
+    </p>
+
+    <p><a href="main.html">Volver a la página principal</a></p>
+
+  </div>
+
     </body>
 </html>
