Cambios contacto.html

--- a/contacto.html
+++ b/contacto.html
@@ -12,19 +12,20 @@
             </tr>
         </table>
         <h1 align ="center">Contacto</h1>
-        <h2>WhatsApp</h2>
-        <h2>Instagram</h2>
   <div align="center">
-    <h1>Contactanos</h1>
+    <table>
+      <tr align="center">
+        <td><a href="https://wa.me/5959972819995"><img src="imagenes/whatsapp.png" alt="WhatsApp" width="60%" height="30"></a></td>
+        <td><a href="https://www.instagram.com/viapy_courier/"><img src="Imagenes/instagram.png" alt="Instagram" width="60%" height="30"></td>
+      </TR>
+      <tr align="center">
+        <td>WhatsApp</td>
+        <td>Instagram</td>
+      </tr>
+    </table>
     
-    <p>
-      <a href="https://wa.me/5959972819995"><img src="imagenes/whatsapp-icon.png" alt="WhatsApp" width="30" height="30">0972 819 995</a>
-    </p>
 
-    <p>
-      <a href="https://www.instagram.com/viapy_courier/"><img src="Imagenes/instagram-icon.png" alt="Instagram" width="30" height="30">@viapy_courier</a>
-    </p>
-
+    
     <p><a href="main.html">Volver a la página principal</a></p>
 
   </div>
