--- a/contacto.html
+++ b/contacto.html
@@ -16,7 +16,7 @@
     <table>
       <tr align="center">
         <td><a href="https://wa.me/5959972819995"><img src="imagenes/whatsapp.png" alt="Logo WhatsApp" width="30%" title="WhatsApp"></a></td>
-        <td><a href="https://www.instagram.com/viapy_courier/"><img src="Imagenes/instagram.png" alt="Logo Instagram" width="30%" title="Instagram"></td>
+        <td><a href="https://www.instagram.com/viapy_courier/"><img src="Imagenes/instagram.png" alt="Logo Instagram" width="30%" title="Instagram"></a></td>
       </TR>
       <tr align="center">
         <td>WhatsApp</td>
