Actualizar contacto.html

--- a/contacto.html
+++ b/contacto.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Contacto - VIAPY</title>
+        <meta charset="UTF-8">
     </head>
     <body bgcolor="#ffffff">
         <table border="0" height="50" width="100%" hspace="30">
