--- a/contacto.html
+++ b/contacto.html
@@ -16,8 +16,8 @@
   <div align="center">
     <table>
       <tr align="center">
-        <td><a href="https://wa.me/5959972819995"><img src="imagenes/whatsapp.png" alt="Logo WhatsApp" width="30%" title="WhatsApp"></a></td>
-        <td><a href="https://www.instagram.com/viapy_courier/"><img src="Imagenes/instagram.png" alt="Logo Instagram" width="30%" title="Instagram"></a></td>
+        <td><a href="https://wa.me/5959972819995"><img src="imagenes/whatsapp.png" onmouseover="this.style.filter='brightness(80%)'" onmouseout="this.style.filter='brightness(100%)'" alt="Logo WhatsApp" width="30%" title="WhatsApp"></a></td>
+        <td><a href="https://www.instagram.com/viapy_courier/"><img src="imagenes/instagram.png" onmouseover="this.style.filter='brightness(80%)'" onmouseout="this.style.filter='brightness(100%)'" alt="Logo Instagram" width="30%" title="Instagram"></a></td>
       </TR>
       <tr align="center">
         <td>WhatsApp</td>
