Removido charset por ser HTML 5, removidos los eventos onmouseover por ser JS

--- a/contacto.html
+++ b/contacto.html
@@ -2,7 +2,6 @@
 <html>
     <head>
         <title>Contacto - VIAPY</title>
-        <meta charset="UTF-8">
     </head>
     <body bgcolor="#ffffff">
         <table border="0" height="50" width="100%" hspace="30">
@@ -16,8 +15,8 @@
   <div align="center">
     <table>
       <tr align="center">
-        <td><a href="https://wa.me/5959972819995"><img src="imagenes/whatsapp.png" onmouseover="this.style.filter='brightness(80%)'" onmouseout="this.style.filter='brightness(100%)'" alt="Logo WhatsApp" width="30%" title="WhatsApp"></a></td>
-        <td><a href="https://www.instagram.com/viapy_courier/"><img src="imagenes/instagram.png" onmouseover="this.style.filter='brightness(80%)'" onmouseout="this.style.filter='brightness(100%)'" alt="Logo Instagram" width="30%" title="Instagram"></a></td>
+        <td><a href="https://wa.me/5959972819995"><img src="imagenes/whatsapp.png" alt="Logo WhatsApp" width="30%" title="WhatsApp"></a></td>
+        <td><a href="https://www.instagram.com/viapy_courier/"><img src="imagenes/instagram.png" alt="Logo Instagram" width="30%" title="Instagram"></a></td>
       </TR>
       <tr align="center">
         <td>WhatsApp</td>
