--- a/contacto.html
+++ b/contacto.html
@@ -1,9 +1,72 @@
 <!--Página de contacto de la empresa. Los enlaces llevan a un chat en WhatsApp y al perfil de Instagram de la empresa-->
 <html>
-    <head>
-        <title>Contacto - VIAPY</title>
+  <head>
+      <title>Contacto - VIAPY</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f7f7f7;
+    }
+
+    header {
+      background-color: #24225f;
+      color: #fff;
+      padding: 40px;
+      text-align: center;
+    }
+
+    main {
+      max-width: 800px;
+      margin: 40px auto;
+      padding: 0 20px;
+    }
+
+    section {
+      margin-bottom: 40px;
+      background: #fff;
+      padding: 20px;
+      border-radius: 8px;
+    }
+
+    form label {
+      display: block;
+      margin-bottom: 5px;
+      font-weight: bold;
+    }
+
+    form input,
+    form textarea {
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 20px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+
+    form button {
+      background-color: #24225f;
+      color: #fff;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+
+    form button:hover {
+      background-color: #24225f;
+    }
+
+    footer {
+      background-color: #24225f;
+      color: #fff;
+      text-align: center;
+      padding: 20px;
+    }
+  </style>
     </head>
-    <body bgcolor="#ffffff">
+  <body bgcolor="#ffffff">
         <table border="0" height="50" width="100%" hspace="30">
             <tr bgcolor="#24225f">
                 <td>
@@ -11,24 +74,53 @@
                 </td>
             </tr>
         </table>
-        <h1 align ="center">Contacto</h1>
-  <div align="center">
-    <table>
+
+    <header>
+      <h1>CONTACTO</h1>
+      <P>Estamos aquí para ayudarte. Completa el formulario y nos pondremos en contacto contigo pronto.</P>
+    </header>
+
+    <main>
+    <section>
+      <h2>Información de Contacto</h2>
+      <p>Teléfono: +595 972 819 995</p>
+      <p>Email: contacto@mail.com</p>
+    </section>
+
+    <section>
+      <h2>Formulario de Contacto</h2>
+      <form action="enviar_contacto" method="POST">
+        <label for="nombre">Nombre:</label>
+        <input type="text" id="nombre" name="nombre" placeholder="Edith Ortiz" required>
+
+        <label for="email">Correo electrónico:</label>
+        <input type="email" id="email" name="email" placeholder="ejemplo@mail.com" required>
+
+        <label for="mensaje">Mensaje:</label>
+        <textarea id="mensaje" name="mensaje" rows="5" placeholder="Escribe un mensaje..." required></textarea>
+
+        <button type="submit">Enviar Mensaje</button>
+      </form>
+    </section>
+
+    <section>
+        <table>
       <tr align="center">
         <td><a href="https://wa.me/5959972819995"><img src="imagenes/whatsapp.png" alt="Logo WhatsApp" width="30%" title="WhatsApp"></a></td>
         <td><a href="https://www.instagram.com/viapy_courier/"><img src="imagenes/instagram.png" alt="Logo Instagram" width="30%" title="Instagram"></a></td>
-      </TR>
+      </tr>
       <tr align="center">
         <td>WhatsApp</td>
         <td>Instagram</td>
       </tr>
     </table>
-    
-
-    
+    </section>
+      </main>
+    <div align="center">
     <p><a href="main.html">Volver a la página principal</a></p>
-
   </div>
-
+      <footer>
+        <p>&copy; 2025 Viapy_Courier. Todos los derechos reservados.</p>
+      </footer>
     </body>
 </html>
