--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -1,10 +1,13 @@
 <!--Página de información sobre la empresa. Contenidos proveídos por el cliente y añadidos con cambios mínimos.-->
-
-<html>
+<!DOCTYPE html>
+<html lang="es">
     <head>
+        <meta charset="UTF-8">
         <title>Sobre Nosotros - VIAPY</title>
     </head>
     <body bgcolor="#ffffff">
+        <header>
+            <nav>
         <table border="0" height="50" width="100%" hspace="30">
             <tr bgcolor="#24225f">
                 <td>
@@ -12,6 +15,10 @@
                 </td>
             </tr>
         </table>
+                </nav>
+            </header>
+        <main>
+            <section>
         <h1 align="center">Sobre Nosotros</h1>
         <p>Con VIAPY podes realizar tus compras online y te lo traemos hasta Asunción. Pedí tu casilla gratuita hoy mismo.</p>
         <p>¿Necesitas ayuda? Envianos un mensaje y te asesoramos al momento de hacer las compras.</p>
@@ -29,9 +36,14 @@
                 <td>eBay</td>
                 <td>Temu</td>
             </tr>
-        </table>
+        </table>   
         <br>
         <p>Y muchas páginas más</p>
         <p><a href="contacto.html">Contactanos</a></p>
+        </section>
+    </main>
+        <footer>
+            <p>&copy; 2025 VIAPY. Todos los derechos reservados.</p>
+        </footer>
     </body>
 </html>
