--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -20,9 +20,28 @@
         <main>
             <section>
         <h1 align="center">Sobre Nosotros</h1>
+        <article>
+                <h2>Misión</h2>
+                <p>Brindar un servicio confiable y accesible para que nuestros clientes puedan realizar sus compras online en tiendas del exterior y recibirlas en Paraguay de forma segura y rápida.</p>
+         </article>
+                <article>
+                <h2>Visión</h2>
+                <p>Ser la empresa líder en logística de compras internacionales en Paraguay, reconocida por nuestra eficiencia, innovación y atención al cliente.</p>
+         </article>
+         <article>
+                <h2>Visión</h2>
+                <p>Ser la empresa líder en logística de compras internacionales en Paraguay, reconocida por nuestra eficiencia, innovación y atención al cliente.</p>
+         </article>
+         <article>
+                <h2>Visión</h2>
+                <p>Ser la empresa líder en logística de compras internacionales en Paraguay, reconocida por nuestra eficiencia, innovación y atención al cliente.</p>
+        </article>
+     <article>  
+          <h2>Nuestro Servicio</h2>
         <p>Con VIAPY podes realizar tus compras online y te lo traemos hasta Asunción. Pedí tu casilla gratuita hoy mismo.</p>
         <p>¿Necesitas ayuda? Envianos un mensaje y te asesoramos al momento de hacer las compras.</p>
         <p>Traé tus compras de:</p>
+         </article>           
         <table>
             <tr align="center">
                 <td><a href="https://www.amazon.com" target="_blank"><img src=imagenes/amazon.png width="60%" title="Ir a Amazon" alt="Logo de Amazon"></a></td>
