--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -62,7 +62,7 @@
         </section>
     </main>
         <footer>
-            <p>&copy; 2025 VIAPY. Todos los derechos reservados.</p>
+           <p>&copy; 2025 Viapy_Courier. Todos los derechos reservados.</p>
         </footer>
     </body>
 </html>
