--- a/contacto.html
+++ b/contacto.html
@@ -1,7 +1,10 @@
 <!--Página de contacto de la empresa. Los enlaces llevan a un chat en WhatsApp y al perfil de Instagram de la empresa-->
 <html>
-  <head>
-      <title>Contacto - VIAPY</title>
+
+<head>
+  <title>Contacto - VIAPY</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="style.css">
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -14,6 +17,7 @@
       background-color: #24225f;
       color: #fff;
       padding: 40px;
+      margin-top: 10px;
       text-align: center;
     }
 
@@ -58,29 +62,34 @@
       background-color: #24225f;
     }
 
-    footer {
-      background-color: #24225f;
-      color: #fff;
-      text-align: center;
-      padding: 20px;
-    }
   </style>
-    </head>
-  <body bgcolor="#ffffff">
-        <table border="0" height="50" width="100%" hspace="30">
-            <tr bgcolor="#24225f">
-                <td>
-                    <a href="main.html"><img src="imagenes/logo.png" height="50" align="left" alt="Logo VIAPY" title="VIAPY - Inicio"></a>
-                </td>
-            </tr>
-        </table>
+</head>
 
-    <header>
-      <h1>CONTACTO</h1>
-      <P>Estamos aquí para ayudarte. Completa el formulario y nos pondremos en contacto contigo pronto.</P>
-    </header>
+<body bgcolor="#ffffff">
+  <nav>
+    <div class="navbar">
+      <a id="button" href="contacto.html">Contacto</a>
+      <a id="button" href="direccion.html">Como Llegar y Zona Delivery</a>
+      <a id="button" href="preguntas.html">Preguntas Frecuentes</a>
+      <div class="dropdown">
+        <button class="dropbtn">Servicios</button>
+        <div class="dropdown-content">
+          <a href="flete.html">Flete Miami - Asunción</a>
+          <a href="intermediario.html">Compramos por vos</a>
+          <a href="delivery.html">Delivery de paquetes</a>
+          <a href="externo.html">Asesoramiento para empresas</a>
+        </div>
+      </div>
+      <a id="button" href="sobrenosotros.html">Sobre Nosotros</a>
+      <a class="img" href="main.html" style="float:left"><img src="imagenes/logo.png" height="21px"></a>
+    </div>
+  </nav>
+  <header>
+    <h1>CONTACTO</h1>
+    <P>Estamos aquí para ayudarte. Completa el formulario y nos pondremos en contacto contigo pronto.</P>
+  </header>
 
-    <main>
+  <main>
     <section>
       <h2>Información de Contacto</h2>
       <p>Teléfono: +595 972 819 995</p>
@@ -104,23 +113,26 @@
     </section>
 
     <section>
-        <table>
-      <tr align="center">
-        <td><a href="https://wa.me/5959972819995"><img src="imagenes/whatsapp.png" alt="Logo WhatsApp" width="30%" title="WhatsApp"></a></td>
-        <td><a href="https://www.instagram.com/viapy_courier/"><img src="imagenes/instagram.png" alt="Logo Instagram" width="30%" title="Instagram"></a></td>
-      </tr>
-      <tr align="center">
-        <td>WhatsApp</td>
-        <td>Instagram</td>
-      </tr>
-    </table>
+      <table>
+        <tr align="center">
+          <td><a href="https://wa.me/5959972819995"><img src="imagenes/whatsapp.png" alt="Logo WhatsApp" width="30%"
+                title="WhatsApp"></a></td>
+          <td><a href="https://www.instagram.com/viapy_courier/"><img src="imagenes/instagram.png" alt="Logo Instagram"
+                width="30%" title="Instagram"></a></td>
+        </tr>
+        <tr align="center">
+          <td>WhatsApp</td>
+          <td>Instagram</td>
+        </tr>
+      </table>
     </section>
-      </main>
-    <div align="center">
+  </main>
+  <div align="center">
     <p><a href="main.html">Volver a la página principal</a></p>
   </div>
-      <footer>
-        <p>&copy; 2025 Viapy_Courier. Todos los derechos reservados.</p>
-      </footer>
-    </body>
+  <footer>
+    <p>&copy; 2025 Viapy_Courier. Todos los derechos reservados.</p>
+  </footer>
+</body>
+
 </html>
