Juntadas todas las partes, normalización de estilos

--- a/externo.html
+++ b/externo.html
@@ -6,11 +6,10 @@
     </head>
     <body bgcolor="#ffffff">
         <nav>
-            <div class="navbar">
-                <a href="main.html"><img src="imagenes/logo.png" height="20"></a>
-                <a href="contacto.html">Contacto</a>
-                <a href="direccion.html">Como Llegar y Zona Delivery</a>
-                <a href="preguntas.html">Preguntas Frecuentes</a>
+            <div class="navbar"> 
+                <a id="button" href="contacto.html">Contacto</a>
+                <a id="button" href="direccion.html">Como Llegar y Zona Delivery</a>
+                <a id="button" href="preguntas.html">Preguntas Frecuentes</a>
                 <div class="dropdown">
                     <button class="dropbtn">Servicios</button>
                     <div class="dropdown-content">
@@ -20,11 +19,16 @@
                         <a href="externo.html">Asesoramiento para empresas</a>
                     </div>
                 </div>
-                <a href="sobrenosotros.html">Sobre Nosotros</a>
+                <a id="button" href="sobrenosotros.html">Sobre Nosotros</a>
+                <a class="img" href="main.html" style="float:left"><img src="imagenes/logo.png" height="21px"></a>
             </div>
         </nav>
         <section>
             <article>
-                <H1>Redirigiendo a Agencia Lobo...</H1>
+                <H1 id="paragraph" align="center">Redirigiendo a Agencia Lobo...</H1>
             </article>
         </section>
+        <footer style="position: fixed; bottom: 0; left: 0; width: 100%;">
+            <p>&copy; 2025 Viapy_Courier. Todos los derechos reservados.</p>
+        </footer>
+    </body>
