--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -48,7 +48,7 @@
         </header>
         <main>
             <section>
-        <article id="paragraph">
+        <article id="paragraph" style="text-align: center;">
             <div>
                 <br>
                 <h2 align="center">Misión</h2>
